--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,8 +1,7 @@
 <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-    <p>Blog template built for
-        <a href="https://getbootstrap.com/">Bootstrap</a>
-        by
-        <a href="https://twitter.com/mdo">@mdo</a>.</p>
+    <div class="container text-center">
+        <p class="py-4 mb-0">Copyright 2025 Designed by <a href="/index.html" class="link-warning text-decoration-none">ISLP Lab.</a></p>
+      </div>     
     <p class="mb-0">
         <a href="#">Back to top</a>
     </p>
