remove archive sidebar

--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -6,7 +6,7 @@
                 <img
                     class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
                     href="technology.html#post1">
-                    <img src="thumb-tech.jpg" width="96" height="96" alt="Seminar thumbnail">
+                    <img src="thumb-tech.jpg" width="96" height="96" alt="Seminar">
                         <div class="col-lg-8">
                             <h6 class="mb-0">Lab. Seminar</h6>
                             <small class="text-body-secondary">April 30, 2025</small>
@@ -18,7 +18,7 @@
                 <a
                     class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
                     href="programming.html#post2">
-                    <img src="thumb-prog.jpg" width="96" height="96" alt="Seminar thumbnail">
+                    <img src="thumb-prog.jpg" width="96" height="96" alt="Seminar">
                         <div class="col-lg-8">
                             <h6 class="mb-0">Lab. Seminar</h6>
                             <small class="text-body-secondary">April 9, 2025</small>
@@ -29,7 +29,7 @@
         </ul>
     </div>
 
-    <div class="p-4">
+    <!-- <div class="p-4">
         <h4>Archives</h4>
         <div class="accordion" id="archiveAccordion">
             <div class="accordion-item">
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="p-4">
         <h4 class="fst-italic">Elsewhere</h4>
